[package]
authors = ["FL03 <jo3mccain@icloud.com>"]
description = "template-wasm-pack"
edition = "2021"
keywords = ["template"]
license = "MIT"
name = "template-wasm-pack"
readme = "README.md"
repository = "https://github.com/FL03/template-wasm-pack"
version = "0.1.0"

[features]
default = ["console"]
full = ["default", "alloc"]
alloc = ["wee_alloc"]
console = ["console_error_panic_hook"]


[lib]
crate-type = ["cdylib", "rlib"]
name = "lib"
path = "src/lib.rs"
test = true

[dependencies]
wasm-bindgen = "0.2.81"

[dependencies.console_error_panic_hook]
optional = true
version = "0.1.7"

[dependencies.wee_alloc]
optional = true
version = "0.4.5"

[dev-dependencies]
wasm-bindgen-test = "0.3.13"

[profile.release]
# Tell `rustc` to optimize for small code size.
opt-level = "s"